# bkn-specification

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh.md
.github/workflows/: publish-npm.yml  publish-pypi.yml  sdk-packaging-verify.yml
bkn_editor/: .env.local.example  README.md  package-lock.json  package.json
bkn_editor/app/: page.tsx
bkn_editor/lib/: bkn-parser.ts  mock-data-sources.ts
bkn_editor/types/: bkn.ts
cli/: README.md  go.mod
components/AIGenerate/: AIGenerateDialog.tsx
docs/: ARCHITECTURE.md  SPECIFICATION.en.md  SPECIFICATION.llm.md  SPECIFICATION.md
docs/bkn_docs/: SPECIFICATION.en.md  SPECIFICATION.llm.md  SPECIFICATION.md
docs/examples/: k8s-topology.bkn
docs/templates/: action.bkn.template  (+8 more)
examples/: k8s-topology.bkn
ref/: HD供应链业务知识网络_v2.json  SPEC.md  object_types.json  ontology_import_openapi_v2.json  relation_types.json  医疗知识网络.json
sdk/: README.md  README.zh.md
sdk/python/: README.md  README.zh.md  pyproject.toml
sdk/python/src/bkn/: __init__.py  checksum.py  delete.py  loader.py  models.py  parser.py  serializer.py  tar.py  validator.py
sdk/python/src/bkn/risk/: __init__.py  evaluate.py
sdk/python/src/bkn/transformers/: __init__.py  base.py  kweaver.py
sdk/python/src/bkn/transformers/kweaver/: __init__.py  client.py  transformer.py  types.py
sdk/python/tests/: test_checksum.py  test_connection.py  test_delete.py  test_examples_verify.py  test_kweaver.py  test_loader_dir_discovery.py  test_md_compat.py  test_parser.py  test_risk.py  test_serializer.py  test_tar.py  test_validator.py
(+274 files in other folders)
